fix nav styling to prevent title from overlapping clickable region of personal links

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,9 @@ nav {
     display: flex;
     justify-content: space-between;
 }
-
+.nav-left {
+    width: 124px;
+}
 .nav-middle {
     display: flex;
     align-items: center;
@@ -20,7 +22,7 @@ nav {
 h1 {
     font-size: 24px;
     text-align: center;
-    position: absolute;
+    position: relative;
     left: 0;
     right: 0;
     color: white;
